--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,11 +1,142 @@
 ---
-title: Page Title
+title: Stefanie Behrens || Sprache & Redaktion
 ---
 
-.delete-me
+.section.hero
+  .hero-inner
+    .hero-logo
+      %i.fa.fa-bullhorn.fa-5x
+    .hero-copy
+      %h2 Sprache & Redaktion
+      %h1 Stefanie Behrens
+      %p Sprecherin
+      %a.scroll-on-page-link{:href => "#about"}
+        %i.fa.fa-chevron-down.fa-3x
+    %audio{:controls => ""}
+      %source{:src => "assets/audio/intro.mp3", :type => "audio/mpeg"}
+
+.section.dark#about
   .container
-    %h1 thoughtbot Middleman Starter
-    %p
-      You're all set!
-      <a href="http://github.com/thoughtbot/proteus-middleman">Let's get started</a>
-      building your prototype.
+    .side-content
+      .aside
+        <!-- www.intagme.com -->
+        %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no",
+        :src => "http://www.intagme.com/in/?u=Z2xhbW9yb3VzX25hdHVyZXxpbnwxMDB8NHw2fHx5ZXN8NXx1bmRlZmluZWR8eWVz",
+        :style => "border:none; overflow:hidden; width:460px; height: 690px"}
+      .content
+        %h4 About Me
+        %h1 WER BIN ICH?
+        %p
+          Seit dem <b>Germanistik- und Publizistikstudium</b> arbeite ich für
+          unterschiedliche <b>Mediengattungen wie Internet, Radio,
+          Print und TV</b>.
+          Inhaltlich decke ich ein breites Spektrum von Lifestyle-Themen ab und
+          <b>schreibe/spreche</b> seit 1993 über <b>Stars, Mode, Beauty und
+          Design</b>.
+          Zudem fotografiere ich gerne schöne Momente ...
+          bei <i class="fa fa-instagram"></i> <b>Instagram</b> bin ich unter
+          %a{:href => "http://instagram.com/glamorous_nature", :target => "_blank"}
+            @glamorous_nature
+          zu finden.
+        %a.scroll-on-page-link{:href => "#services"}
+          %i.fa.fa-chevron-down.fa-3x#next
+
+.section#services
+  .container
+    %h4 Leistungen
+    %h1 WAS MACHE ICH?
+    .flex-boxes
+      %a.flex-box{:href => "javascript:void(0)"}
+        %img{:alt => "", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2_dark.png"}/
+        %h1.flex-title Text-Arbeit
+        %p Sie geben das Thema und Zeilenzahl vor, ich schreibe in Abstimmung mit Ihnen den Text.
+      %a.flex-box{:href => "javascript:void(0)"}
+        %img{:alt => "", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1_dark.png"}/
+        %h1.flex-title Sprach-Aufnahmen
+        %p Sie schicken den Text, ich redigiere diesen in Abstimmung mit Ihnen und sende Ihnen die fertige Aufnahme.
+      %a.flex-box{:href => "javascript:void(0)"}
+        %img{:alt => "", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png"}/
+        %h1.flex-title Interviews
+        %p Sie organisieren den Termin, ich bereite das Interview vor, führe es durch und schicke Ihnen den fertigen Text.
+    %a.scroll-on-page-link{:href => "#references"}
+      %i.fa.fa-chevron-down.fa-3x#next
+
+.section.dark#references
+  .container
+    %h4 Referenzen
+    %h1 Hier meine Referenzen!
+    %ul.accordion-tabs
+      %li.tab-header-and-content
+        %a.is-active.tab-link
+          %i.fa.fa-comment
+          Beiträge
+        .tab-content
+          %table
+            %tr
+              %td SAT 1
+              %td Wicked: Starfotografin Ellen von Unwert
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/unwert.mp3", :type => "audio/mpeg"}
+            %tr
+              %td MDR, zuhause
+              %td Perfekte Illusion: Kulissen für Soap Operas
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/soap.mp3", :type => "audio/mpeg"}
+            %tr
+              %td ARD, ratgeber reise
+              %td Hanoi: Ausgangspunkt für Vietnam-Reisende
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/vietnam.mp3", :type => "audio/mpeg"}
+      %li.tab-header-and-content
+        %a.tab-link{:href => "javascript:void(0)"}
+          %i.fa.fa-sitemap
+          Multimedia
+        .tab-content
+          %table
+            %tr
+              %td Bundesanstalt für Wasserbau
+              %td Expo am Meer (englisch)
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/ExpoEnglisch.mp3", :type => "audio/mpeg"}
+            %tr
+              %td Deutsche Bank
+              %td Beratungs-Avatar Cor@
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/cora.mp3", :type => "audio/mpeg"}
+            %tr
+              %td SAT 1
+              %td Tasha / Gast in Andreas Türcks TV-Talkshow
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/tasha.mp3", :type => "audio/mpeg"}
+      %li.tab-header-and-content
+        %a.tab-link{:href => "javascript:void(0)"}
+          %i.fa.fa-gift
+          Werbung
+        .tab-content
+          %table
+            %tr
+              %td Radio
+              %td Weihnachtstrailer 94,3 r.s.2 Berlin
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/rs2.mp3", :type => "audio/mpeg"}
+            %tr
+              %td TV
+              %td Frauenzeitschrift ELLE
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/elle.mp3", :type => "audio/mpeg"}
+            %tr
+              %td Kino
+              %td SFB 4 Multi Kulti 106,8
+              %td
+                %audio{:controls => ""}
+                  %source{:src => "assets/audio/MultiKulti2.mp3", :type => "audio/mpeg"}
+    %a.scroll-on-page-link{:href => "#contact"}
+      %i.fa.fa-chevron-down.fa-3x#next
