--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -10,6 +10,6 @@
   %body{class: page_classes}
     = partial "partials/navigation.html"
     = yield
-    = partial "partials/footer.html"
+    = partial "partials/footer"
     = partial "partials/scroll-to-top"
     = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "application"
