--- a/source/assets/stylesheets/_hero-unit.scss
+++ b/source/assets/stylesheets/_hero-unit.scss
@@ -28,12 +28,17 @@
       margin-bottom: 4em;
 
       h1 {
-        font-size: 1.6em;
+        font-size: $base-font-size * 1.6;
         margin-bottom: .5em;
 
         @include media($large-screen) {
           font-size: 1.8em;
         }
+      }
+
+      h2 {
+        font-size: $base-font-size * 2;
+        margin-bottom: 0em;
       }
 
       p {
