--- a/source/assets/stylesheets/_modal.scss
+++ b/source/assets/stylesheets/_modal.scss
@@ -1,35 +1,57 @@
 .modal {
+  $base-border-color: #dcdcdc !default;
+  $base-border-radius: 3px !default;
+  $base-background-color: #fff !default;
+  $base-font-size: 1em !default;
+  $base-line-height: 1.5em !default;
+  $action-color: #477dca !default;
+  $dark-gray: #333 !default;
+  $light-gray: #ddd !default;
+  $medium-screen: 40em !default;
+  $large-screen: 53.75em !default;
+  $base-font-color: $dark-gray !default;
   $modal-padding: 3em;
   $modal-background: $base-background-color;
   $modal-close-color: $light-gray;
   $modal-image-height: 135px;
   $modal-image-width: $modal-image-height;
+  $modal-trigger-image-width: 300px;
 
   label {
     cursor: pointer;
-    font-size: 1em;
-    font-weight: normal;
+    margin-bottom: 0;
   }
 
-  input[type="checkbox"] {
+  label img {
+    border-radius: $modal-trigger-image-width / 2;
+    display: block;
+    max-width: $modal-trigger-image-width;
+  }
+
+  .modal-state {
     display: none;
   }
 
-  .modal-open {
-    overflow: hidden;
+  .modal-trigger {
+    padding: 0.8em 1em;
   }
 
-  .modal-window { // overlay
-    @include transition(opacity .25s ease);
-    @include position(fixed, 0px 0px 0px 0px);
-    background: rgba(0,0,0, .85);
+  .modal-fade-screen { // overlay
+    @include position(fixed, 0);
+    background-color: rgba(#000, 0.85);
     opacity: 0;
+    padding-top: 0.6em;
     text-align: left;
+    transition: opacity 0.25s ease;
     visibility: hidden;
     z-index: 99999999999;
 
+    @include media($large-screen) {
+      padding-top: 10em;
+    }
+
     .modal-bg {
-      @include position(absolute, 0px 0px 0px 0px);
+      @include position(absolute, 0);
       cursor: pointer;
     }
   }
@@ -37,88 +59,79 @@
   .modal-close {
     @include position(absolute, ($modal-padding /2) ($modal-padding /2) null null);
     @include size(1.5em);
-    cursor: pointer;
     background: $modal-background;
+    cursor: pointer;
 
-    &:after,
-    &:before {
+    &::after,
+    &::before {
       @include position(absolute, 3px 3px 0 50%);
-      @include transform(rotate(45deg));
-      @include size(.15em 1.5em);
+      @include size(0.15em 1.5em);
       background: $modal-close-color;
-      content: '';
+      content: "";
       display: block;
       margin: -3px 0 0 -1px;
+      transform: rotate(45deg);
     }
 
-    &:hover:after,
-    &:hover:before {
-      background: darken($modal-close-color, 10);
+    &:hover::after,
+    &:hover::before {
+      background: darken($modal-close-color, 10%);
     }
 
-    &:before {
-      @include transform(rotate(-45deg));
+    &::before {
+      transform: rotate(-45deg);
     }
   }
 
   .modal-inner {
-    @include transition(opacity .25s ease);
-    border-radius: $base-border-radius;
     background: $modal-background;
+    border-radius: $base-border-radius;
     margin: auto;
+    margin-top: 0;
     max-height: 95%;
-    position: relative;
     overflow: auto;
+    padding: $modal-padding / 2;
+    position: relative;
+    transition: opacity 0.25s ease;
     width: 95%;
-    padding: $modal-padding /2;
-    margin-top: .6em;
 
     @include media($medium-screen) {
+      max-height: 70%;
       padding: $modal-padding;
       width: 60%;
-      max-height: 60%;
-      margin-top: 10em;
     }
 
     @include media($large-screen) {
       width: 50%;
-      margin-top: 10em;
     }
 
     h1 {
       color: $base-font-color;
-      margin-bottom: .6em;
       text-align: left;
       text-transform: capitalize;
     }
 
-    p.intro, p.body, p.end {
+    p {
       color: $base-font-color;
-      font-size: $base-font-size;
-      line-height: 1.45em;
-      max-width: 100% !important;
-      text-align: left;
+      line-height: $base-line-height;
+    }
 
-      &.intro {
-        color: $blue;
-        line-height: 1.6em;
-      }
+    .modal-intro {
+      margin-bottom: 1em;
+    }
 
-      &.body {
-        @include media($medium-screen) {
-          @include columns(2 8em);
-        }
-      }
+    .modal-content {
+      color: $base-font-color;
 
-      &.end a.blue {
-        color: $blue;
+      @include media($medium-screen) {
+        columns: 2 8em;
       }
     }
 
     a.cta {
-      color: white;
+      color: $base-background-color;
       display: inline-block;
-      margin-right: .5em;
+      margin-right: 0.5em;
       margin-top: 1em;
 
       &:last-child {
@@ -127,14 +140,18 @@
     }
   }
 
-  .modal-state:checked + .modal-window {
+  .modal-state:checked + .modal-fade-screen {
     opacity: 1;
     visibility: visible;
   }
 
-  .modal-state:checked + .modal-window .modal-inner {
-    top: 0;
+  .modal-state:checked + .modal-fade-screen .modal-inner {
+    top: 0.5em;
   }
+}
+
+.modal-open {
+  overflow: hidden;
 }
 
 // Based on code by Kasper Mikiewicz
