change to portrait image

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,10 +19,7 @@ title: Stefanie Behrens || Sprache & Redaktion
   .container
     .side-content
       .aside
-        <!-- www.intagme.com -->
-        %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no",
-        :src => "http://www.intagme.com/in/?u=Z2xhbW9yb3VzX25hdHVyZXxpbnwxMDB8NHw2fHx5ZXN8NXx1bmRlZmluZWR8eWVz",
-        :style => "border:none; overflow:hidden; width:460px; height: 690px"}
+        %img{:src => "/assets/images/portrait.jpg", :alt => "Stefanie Behrens", :height => "500"}
       .content
         %h4 About Me
         %h1 WER BIN ICH?
