--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,7 +19,7 @@ title: Stefanie Behrens || Sprache & Redaktion
   .container
     .side-content
       .aside
-        %img{:src => "/assets/images/portrait.jpg", :alt => "Stefanie Behrens", :height => "500"}
+        %img{:src => "/assets/images/portrait.png", :alt => "Stefanie Behrens", :height => "500"}
       .content
         %h4 About Me
         %h1 WER BIN ICH?
