--- a/source/assets/stylesheets/_navigation.scss
+++ b/source/assets/stylesheets/_navigation.scss
@@ -26,7 +26,7 @@
     max-height: $centered-navigation-height;
     padding-left: $centered-navigation-padding;
 
-    img {
+    img, i {
       max-height: $centered-navigation-height;
       opacity: .6;
       padding: .8em 0;
