--- a/source/partials/navigation.html
+++ b/source/partials/navigation.html
@@ -1,15 +1,15 @@
 <header id="navigation" class="centered-navigation">
   <div class="centered-navigation-wrapper">
-    <a href="javascript:void(0)" class="mobile-logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
-    </a>
+    <div class="mobile-logo">
+      <i class="fa fa-bank fa-lg"></i>
+    </div>
     <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu">MENU</a>
     <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
       <li class="nav-link"><a class="scroll-on-page-link" href="#about">About Me</a></li>
       <li class="nav-link"><a class="scroll-on-page-link" href="#services">Leistungen</a></li>
       <li class="nav-link logo">
         <a href="javascript:void(0)" class="logo">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
+          <i class="fa fa-bank fa-2x"></i>
         </a>
       </li>
       <li class="nav-link"><a class="scroll-on-page-link" href="#references">Referenzen</a></li>
