--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ title: Stefanie Behrens || Sprache & Redaktion
     .hero-copy
       %h2 Sprache & Redaktion
       %h1 Stefanie Behrens
-      %p Sprecherin
+      %h3 Sprecherin & freie Journalistin
       %a.scroll-on-page-link{:href => "#about"}
         %i.fa.fa-chevron-down.fa-3x
     %audio{:controls => ""}
@@ -21,13 +21,13 @@ title: Stefanie Behrens || Sprache & Redaktion
       .aside
         %img{:src => "/assets/images/portrait.png", :alt => "Stefanie Behrens", :height => "500"}
       .content
-        %h4 About Me
-        %h1 WER BIN ICH?
+        %h4 About
+        %h1 Wer ich bin
         %p
           Seit dem <b>Germanistik- und Publizistikstudium</b> arbeite ich für
           unterschiedliche <b>Mediengattungen wie Internet, Radio,
           Print und TV</b>.
-          Inhaltlich decke ich ein breites Spektrum von Lifestyle-Themen ab und
+          Inhaltlich bin ich auf Lifestyle-Themen spezialisiert und
           <b>schreibe/spreche</b> seit 1993 über <b>Stars, Mode, Beauty und
           Design</b>.
           Zudem fotografiere ich gerne schöne Momente ...
@@ -40,8 +40,8 @@ title: Stefanie Behrens || Sprache & Redaktion
 
 .section#services
   .container
-    %h4 Leistungen
-    %h1 WAS MACHE ICH?
+    %h4 Portfolio
+    %h1 Was ich mache
     .flex-boxes
       = partial "partials/modal-textwork"
       %a.flex-box{:href => "#references"}
@@ -59,8 +59,8 @@ title: Stefanie Behrens || Sprache & Redaktion
 
 .section.dark#references
   .container
-    %h4 Referenzen
-    %h1 Hier meine Referenzen!
+    %h4 Demos
+    %h1 Meine Referenzen
     %ul.accordion-tabs
       %li.tab-header-and-content
         %a.is-active.tab-link
