--- a/source/partials/modal-imprint.html.haml
+++ b/source/partials/modal-imprint.html.haml
@@ -7,7 +7,7 @@
     .modal-inner
       .modal-close{:for => "modal-2"}
       %h1 Impressum
-      %p.modal-intro Inhaltlich verantwortlich gemäß § 6 MDStV, Uhrheber und Rechteinhaber der Fotos ist Stefanie Behrens, siehe Kontaktdaten. Einer Aufnahme der Fotos und Kontaktdaten in Datenbanken oder Verzeichnisse sowie einer Nutzung für gewerbliche oder werbende Zwecke wird ausdrücklich widersprochen.
+      %p.modal-intro Inhaltlich verantwortlich gemäß § 6 MDStV, Urheber und Rechteinhaber der Fotos ist Stefanie Behrens, siehe Kontaktdaten. Einer Aufnahme der Fotos und Kontaktdaten in Datenbanken oder Verzeichnisse sowie einer Nutzung für gewerbliche oder werbende Zwecke wird ausdrücklich widersprochen.
       %p.modal-content
         Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Rechtswidrige Inhalte der verlinkten Seiten waren zum Zeitpunkt der Verlinkung nicht erkennbar. Die alte Website findet sich
         %a{:href => "http://sahneeis.de/2002-2014/", :target => "_blank"} hier
