--- a/source/partials/navigation.html
+++ b/source/partials/navigation.html
@@ -5,14 +5,14 @@
     </div>
     <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu">MENU</a>
     <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-      <li class="nav-link"><a class="scroll-on-page-link" href="#about">About Me</a></li>
-      <li class="nav-link"><a class="scroll-on-page-link" href="#services">Leistungen</a></li>
+      <li class="nav-link"><a class="scroll-on-page-link" href="#about">About</a></li>
+      <li class="nav-link"><a class="scroll-on-page-link" href="#services">Portfolio</a></li>
       <li class="nav-link logo">
         <a href="javascript:void(0)" class="logo">
           <i class="fa fa-bank fa-2x"></i>
         </a>
       </li>
-      <li class="nav-link"><a class="scroll-on-page-link" href="#references">Referenzen</a></li>
+      <li class="nav-link"><a class="scroll-on-page-link" href="#references">Demos</a></li>
       <li class="nav-link"><a class="scroll-on-page-link" href="#contact">Kontakt</a></li>
     </ul>
   </div>
