add further interview references

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -141,6 +141,21 @@ title: Stefanie Behrens || Sprache & Redaktion
         .tab-content
           %table
             %tr
+              %td Modedesignerin
+              %td
+                %a{:href => "http://www.gala.de/beauty-fashion/fashion/marina-hoermanseder-im-interview-der-neue-liebling-der-stars_1542556_225822.html", :target => "_blank"} Marina Hoermanseder
+              %td Label MH
+            %tr
+              %td Model, Celebrity
+              %td
+                %a{:href => "http://www.gala.de/beauty-fashion/beauty/emma-heming-willis-ihr-geheimnis-fuer-den-perfekten-baby-body_1540864_225787.html", :target => "_blank"} Emma Heming Willis
+              %td Bruce Willis + CocoBaba
+            %tr
+              %td Moderatorin
+              %td
+                %a{:href => "http://www.gala.de/beauty-fashion/beauty/nazan-eckes-im-interview-meine-rollenbilder-haben-sich-veraendert_1492047_225822.html#10758084", :target => "_blank"} Nazan Eckes
+              %td Ihre Rollenbilder
+            %tr
               %td Model
               %td
                 %a{:href => "http://www.gala.de/beauty-fashion/fashion/stefanie-giesinger-interview-durchbruch-auf-der-fashion-week-new-york_1384631_225770.html", :target => "_blank"} Stefanie Giesinger
