make things consistent

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -136,7 +136,7 @@ title: Stefanie Behrens || Sprache & Redaktion
                   %source{:src => "assets/audio/MultiKulti2.mp3", :type => "audio/mpeg"}
       %li.tab-header-and-content
         %a.tab-link{:href => "javascript:void(0)"}
-          %i.fa.fa-file-text
+          %i.fa.fa-user
           Interviews
         .tab-content
           %table
