--- a/source/partials/footer.html.haml
+++ b/source/partials/footer.html.haml
@@ -11,7 +11,7 @@
         %a{:href => "mailto:info@sahneeis.de"} info@sahneeis.de
     %ul
       %li
-        %h3 Follow Me
+        %h3 Follow
       %li
         %i.fa.fa-instagram.fa-fw
         %a{:href => "http://instagram.com/glamorous_nature"} Instagram
