--- a/source/layouts/application.haml
+++ b/source/layouts/application.haml
@@ -1,9 +1,10 @@
 !!!
 %html
   %head
+    %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", http: {equiv: "X-UA-Compatible"}}
-    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
+    %meta{content: "width=device-width, initial-scale=1", name: "viewport"}
     %title= current_page.data.title || "Stefanie Behrens || Sprache & Redaktion"
     = stylesheet_link_tag "application"
 
