chore(base): update CSS mixin, grid and scaffold for styles, variables, structure

--- a/source/assets/stylesheets/application.css.scss
+++ b/source/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
 @import "vendor/normalize";
 
 @import "bourbon";
-@import "base/base";
+@import "base/base"; // via $ bitters install
 @import "neat";
 @import "font-awesome";
 
