--- a/source/assets/stylesheets/base/_base.scss
+++ b/source/assets/stylesheets/base/_base.scss
@@ -1,15 +1,14 @@
-// Bitters 1.2.0
+// Bitters 1.5.0
 // http://bitters.bourbon.io
 // Copyright 2013-2015 thoughtbot, inc.
 // MIT License
 
 @import "variables";
 
-// Neat Settings -- must be imported before Neat
-@import "grid-settings";
-
 @import "buttons";
 @import "forms";
+@import "layout";
 @import "lists";
+@import "media";
 @import "tables";
 @import "typography";
