--- a/source/assets/stylesheets/base/_forms.scss
+++ b/source/assets/stylesheets/base/_forms.scss
@@ -18,21 +18,20 @@ label {
 }
 
 input,
-select {
+select,
+textarea {
   display: block;
   font-family: $base-font-family;
   font-size: $base-font-size;
 }
 
-#{$all-text-inputs},
-select[multiple] {
+#{$all-text-inputs} {
+  appearance: none;
   background-color: $base-background-color;
   border: $base-border;
   border-radius: $base-border-radius;
   box-shadow: $form-box-shadow;
   box-sizing: border-box;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
   margin-bottom: $small-spacing;
   padding: $base-spacing / 3;
   transition: border-color $base-duration $base-timing;
@@ -56,14 +55,14 @@ select[multiple] {
       border: $base-border;
     }
   }
+
+  &::placeholder {
+    color: tint($base-font-color, 40%);
+  }
 }
 
 textarea {
   resize: vertical;
-}
-
-[type="search"] {
-  appearance: none;
 }
 
 [type="checkbox"],
@@ -78,7 +77,6 @@ textarea {
 }
 
 select {
-  margin-bottom: $base-spacing;
-  max-width: 100%;
-  width: auto;
+  margin-bottom: $small-spacing;
+  width: 100%;
 }
