--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -1,5 +1,9 @@
+// Breakpoints
+$medium-screen: 600px;
+$large-screen: 900px;
+
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: $helvetica; // $font-stack-system; // needed for bourbon 5.0
 $heading-font-family: $base-font-family;
 
 // Font Sizes
