fix(content): change instagram link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -32,8 +32,8 @@ title: Stefanie Behrens || Sprache & Redaktion
           Design</b>.
           Zudem fotografiere ich gerne schöne Momente ...
           bei <i class="fa fa-instagram"></i> <b>Instagram</b> bin ich unter
-          %a{:href => "http://instagram.com/glamorous_nature", :target => "_blank"}
-            @glamorous_nature
+          %a{:href => "http://instagram.com/sahneeis.de", :target => "_blank"}
+            @sahneeis.de
           zu finden.
         %a.scroll-on-page-link{:href => "#services"}
           %i.fa.fa-chevron-down.fa-3x#next
