--- a/source/partials/footer.html.haml
+++ b/source/partials/footer.html.haml
@@ -14,7 +14,7 @@
         %h3 Follow
       %li
         %i.fa.fa-instagram.fa-fw
-        %a{:href => "http://instagram.com/glamorous_nature"} Instagram
+        %a{:href => "http://instagram.com/sahneeis.de"} Instagram
       %li
         %i.fa.fa-xing.fa-fw
         %a{:href => "https://www.xing.com/profile/Stefanie_Behrens8"} XING
